# smokestack

./: Cargo.toml  README.md  design.md  test
smokestack/: Cargo.toml
smokestack-cli/: Cargo.toml
smokestack-cli/src/: component.rs  create.rs  list.rs  main.rs  subscription.rs  tag.rs
smokestack-server/: Cargo.toml
smokestack-server/src/: api.rs  main.rs
smokestack-server/src/api/: components.rs  operations.rs  subscriptions.rs  tags.rs
smokestack/src/: api.rs  lib.rs  model.rs
