[package]
name = "smokestack"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[lints.clippy]
nursery = "warn"
missing_const_for_fn = { level = "allow", priority = 1 }
significant_drop_in_scrutinee = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }

pedantic = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
